update CV for sensors position

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -103,22 +103,22 @@
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Design for changing requirements. Multidisciplinary design optimization. Instrumentation and state estimation.}{spaceafter}
+	\tableentrytwo{\textbf{Research}}{Design for changing requirements. Multidisciplinary design optimization. Instrumentation and state estimation.}{}
 
 	\tableentrytwo{\textbf{Technical}}{}{}
 	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for flexibility and robustness}{}
 	\tableentrytwo{}{-~~Reliability and uncertainty quantification (Monte-Carlo with importance sampling)}{spaceafter}
 	\tableentrytwo{\textsc{Modeling and}}{-~~Finite element methods (thermomechanical, structural, electromagnetic)}{}
-	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods}{}
-	\tableentrytwo{}{-~~System dynamics models}{spaceafter}
+	\tableentrytwo{\textsc{simulation}}{-~~System dynamics models}{spaceafter}
 	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (Mesh-adaptive direct search)}{}
 	\tableentrytwo{}{-~~Stochastic optimization}{spaceafter}
 	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (Recurrent neural networks)}{}
-	\tableentrytwo{}{-~~Reinforcement learning (Q-learning)}{}
 	\tableentrytwo{}{-~~Hyperparameter optimization}{spaceafter}
-
+	\tableentrytwo{\textsc{State estimation:}}{-~~Extended Kalman filter}{}
+	\tableentrytwo{}{-~~Mahony complementary filter (attitude estimation)}{spaceafter}
+	
 	\tableentrytwo{\textbf{Software}}{MATLAB and Simulink, Python (PyTorch, matplotlib), C++ (CUDA, OpenMP, Qt)}{}
-	\tableentrytwo{}{FEA (Abaqus, ANSYS), CAD (SOLIDWORKS, NX Siemens), DAQ (NI LabVIEW)}{spaceafter}
+	\tableentrytwo{}{FEA (Abaqus, ANSYS), CAD (SOLIDWORKS, NX Siemens), DAQ (NI LabVIEW)}{}
 
 	%------------------------------------------------
 	
@@ -173,7 +173,7 @@
 	{Mechanical Engineering} % Department
 	{Khalifa University} % Institution
 	{}
-	\tableentrythree{Capstone project}{\textit{Development of a human operated mobile hexapod platform}}{}{spaceafter}
+	\tableentrythree{Capstone project}{\textit{Development of a human operated mobile hexapod platform}}{}{}
 	
 	%------------------------------------------------
 
@@ -209,6 +209,7 @@
 	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
+	\tableentry{$\bullet$}{Developed a deep learning forecasting model for COVID-19 trajectories based on sample viral load measurements from the general population: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
 	\tableentry{$\bullet$}{Built a stochastic COVID model for predicting the spread of the disease in a population using agent-based approaches and used reinforcement learning algorithms to optimize public health policies.}{}
 	\tableentry{$\bullet$}{Applied stochastic optimization to hyperparameter optimization problems in machine learning.}{}
 	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization with applications to aircraft design.}{spaceafter}
@@ -222,7 +223,7 @@
 	{Research assistant} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
-	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexiblity and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
+	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes.}{}
 	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
 	\tableentry{$\bullet$}{Used machine learning models to subsitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements (Jacobian formulation).}{spaceafter}
@@ -237,7 +238,7 @@
 	{}{}  % Description
 	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research on optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
 	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexiblity and robustness.}{}
-	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parameteric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
+	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parametric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -276,7 +277,7 @@
 	{Abu Dhabi, UAE} % Location
 	{Khalifa university Baja SAE team leader} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Lead the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
+	\tableentry{$\bullet$}{Led the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
 	\tableentry{$\bullet$}{Guided the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
 	\tableentry{$\bullet$}{Performed structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
 	\tableentry{$\bullet$}{Provided workshops on finite elemenet anaylsis and computer aided design to team members.}{}
@@ -315,7 +316,7 @@
 	{Engineering intern} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Wrote programs for industrial plant operation and control using distributed control systems.}{}
-	\tableentry{$\bullet$}{Visited the main headquarters in Japan to represent the Abu Dhabi National Oil Company.}{spaceafter}
+	\tableentry{$\bullet$}{Visited the main headquarters in Japan to represent the Abu Dhabi National Oil Company.}{}
 
 	%------------------------------------------------
 	
@@ -441,7 +442,7 @@
 
 %------------------------------------------------
 
-\medskip % Extra whitespace before the next section
+% \medskip % Extra whitespace before the next section
 
 %----------------------------------------------------------------------------------------
 %	SPECIAL ELECTIVE COURSES
@@ -484,7 +485,7 @@
 \end{paracol}
 %------------------------------------------------
 
-\medskip % Extra whitespace before the next section
+% \medskip % Extra whitespace before the next section
 
 %----------------------------------------------------------------------------------------
 %	PERSONAL INTERESTS
