--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -103,7 +103,7 @@
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Design for changing requirements. Multidisciplinary design optimization. Instrumentation and state estimation.}{spaceafter}
+	\tableentrytwo{\textbf{Research}}{Design for changing requirements and design under uncertainty. Additive manufacturing. Multidisciplinary design optimization. Instrumentation and state estimation.}{spaceafter}
 
 	\tableentrytwo{\textbf{Technical}}{}{}
 	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for flexibility and robustness}{}
@@ -112,13 +112,14 @@
 	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods}{}
 	\tableentrytwo{}{-~~System dynamics models}{spaceafter}
 	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (Mesh-adaptive direct search)}{}
+	\tableentrytwo{}{-~~Multidisciplinary optimization (Non-hierarchical analytical target cascading)}{}
 	\tableentrytwo{}{-~~Stochastic optimization}{spaceafter}
 	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (Recurrent neural networks)}{}
 	\tableentrytwo{}{-~~Reinforcement learning (Q-learning)}{}
 	\tableentrytwo{}{-~~Hyperparameter optimization}{spaceafter}
 
-	\tableentrytwo{\textbf{Software}}{MATLAB and Simulink, Python (PyTorch, matplotlib), C++ (CUDA, OpenMP, Qt)}{}
-	\tableentrytwo{}{FEA (Abaqus, ANSYS), CAD (SOLIDWORKS, NX Siemens), DAQ (NI LabVIEW)}{spaceafter}
+	\tableentrytwo{\textbf{Software}}{MATLAB and Simulink (Deep learning toolbox, global optimization toolbox), Python (numpy, pandas, PyTorch, matplotlib), C++ (CUDA, OpenMP, Qt)}{}
+	\tableentrytwo{}{FEA (Abaqus, ANSYS), CAD (SOLIDWORKS, NX Siemens), DAQ (NI LabVIEW)}{}
 
 	%------------------------------------------------
 	
@@ -173,7 +174,7 @@
 	{Mechanical Engineering} % Department
 	{Khalifa University} % Institution
 	{}
-	\tableentrythree{Capstone project}{\textit{Development of a human operated mobile hexapod platform}}{}{spaceafter}
+	\tableentrythree{Capstone project}{\textit{Development of a human operated mobile hexapod platform}}{}{}
 	
 	%------------------------------------------------
 
@@ -209,9 +210,10 @@
 	{Montr\'{e}al, Canada} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
+	\tableentry{$\bullet$}{Developed a deep learning forecasting model for COVID-19 trajectories based on sample viral load measurements from the general population: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
 	\tableentry{$\bullet$}{Built a stochastic COVID model for predicting the spread of the disease in a population using agent-based approaches and used reinforcement learning algorithms to optimize public health policies.}{}
 	\tableentry{$\bullet$}{Applied stochastic optimization to hyperparameter optimization problems in machine learning.}{}
-	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization with applications to aircraft design.}{spaceafter}
+	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization (NoHiMDO) with applications to aircraft design.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -222,10 +224,10 @@
 	{Research assistant} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
-	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexiblity and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
+	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes.}{}
 	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
-	\tableentry{$\bullet$}{Used machine learning models to subsitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements (Jacobian formulation).}{spaceafter}
+	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements (Jacobian formulation).}{spaceafter}
 
 	%------------------------------------------------
 
@@ -236,8 +238,8 @@
 	{Visiting researcher} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Participated in a technology transfer to translate my research on optimization into industrial practice by provided training modules and workshops to GKN engineers (MATLAB and Python).}{}
-	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexiblity and robustness.}{}
-	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parameteric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
+	\tableentry{$\bullet$}{Surveyed GKN engineers about their experience designing areoengine components for engine system manufacturers to create a timeline of expected design updates and changes. This data formed the basis of a case study for my research on design for flexibility and robustness.}{}
+	\tableentry{$\bullet$}{Set up advanced design automation and exploration tools to be used as part of GKN's workflow (engineering workbench) by integrated parametric design software (NX Siemens) with simulation software (Abaqus and ANSYS) to evaluate hundreds of concepts for a turbine rear frame.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -247,9 +249,9 @@
 	{Abu Dhabi, UAE} % Location
 	{Visiting researcher} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Performed sensor fusion research with applications to unmanned aerial vehicle (UAV) control and manuevering.}{}
-	\tableentry{$\bullet$}{Fused UAV interial measurement unit (IMU) data with high latency positioning measurements from an Optitrack motion capture system to obtain smooth high frequency attitude estimates suitable for control applications.}{}
-	\tableentry{$\bullet$}{Used the principles of quaternion transformation to translate observed attitude in the IMU reference frame to an interial reference frame.}{}
+	\tableentry{$\bullet$}{Performed sensor fusion research for unmanned aerial vehicle (UAV) control and maneuvering.}{}
+	\tableentry{$\bullet$}{Fused UAV inertial measurement unit (IMU) data with high latency positioning measurements from an Optitrack motion capture system to obtain smooth high frequency attitude estimates suitable for control applications.}{}
+	\tableentry{$\bullet$}{Used the principles of quaternion transformation to translate observed attitude in the IMU reference frame to an inertial reference frame.}{}
 	\tableentry{$\bullet$}{Repurposed a DJI Wind 4 UAV for firefighting by redesigning the drone platform to carry an extinguishant payload.}{}
 	\tableentry{$\bullet$}{Co-authored a paper based on the repurposed UAV to be published in a special issue of the Journal of Field Robotics.}{spaceafter}
 
@@ -315,7 +317,7 @@
 	{Engineering intern} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Wrote programs for industrial plant operation and control using distributed control systems.}{}
-	\tableentry{$\bullet$}{Visited the main headquarters in Japan to represent the Abu Dhabi National Oil Company.}{spaceafter}
+	\tableentry{$\bullet$}{Visited the main headquarters in Japan to represent the Abu Dhabi National Oil Company.}{}
 
 	%------------------------------------------------
 	
@@ -441,7 +443,7 @@
 
 %------------------------------------------------
 
-\medskip % Extra whitespace before the next section
+% \medskip % Extra whitespace before the next section
 
 %----------------------------------------------------------------------------------------
 %	SPECIAL ELECTIVE COURSES
@@ -484,7 +486,7 @@
 \end{paracol}
 %------------------------------------------------
 
-\medskip % Extra whitespace before the next section
+% \medskip % Extra whitespace before the next section
 
 %----------------------------------------------------------------------------------------
 %	PERSONAL INTERESTS
@@ -511,9 +513,9 @@
 	%----------------------------------------------------------------------------------------
 
 	\begin{itemize}\itemsep0em 
-		\item 3d printing hobbyist
+		\item 3D printing hobbyist
 		\item Car modding (muscle cars) and drag racing
-		\item Tinkering and taking apart any machine and putting it back together!		
+		\item Tinkering/modifying any machine I get my hands on!		
 	\end{itemize}
 
 	%----------------------------------------------------------------------------------------
