Update CV for CMPA

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -103,7 +103,7 @@
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Design for changing requirements and design under uncertainty. Additive manufacturing. Multidisciplinary design optimization. Instrumentation and state estimation.}{spaceafter}
+	\tableentrytwo{\textbf{Research}}{Design under uncertainty. Additive manufacturing. Multidisciplinary design optimization. Decision making using Agent-based modeling. Instrumentation and state estimation.}{spaceafter}
 
 	\tableentrytwo{\textbf{Technical}}{}{}
 	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for flexibility and robustness}{}
@@ -211,7 +211,7 @@
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
 	\tableentry{$\bullet$}{Developed a deep learning forecasting model for COVID-19 trajectories based on sample viral load measurements from the general population: \href{https://covid-forecaster-lebanon.herokuapp.com/}{https://covid-forecaster-lebanon.herokuapp.com/}.}{}
-	\tableentry{$\bullet$}{Built a stochastic COVID model for predicting the spread of the disease in a population using agent-based approaches and used reinforcement learning algorithms to optimize public health policies.}{}
+	\tableentry{$\bullet$}{Built and published a stochastic model of the spread of COVID-19 in a population using agent-based approaches and used stochastic optimization algorithms to solve for public health policies.}{}
 	\tableentry{$\bullet$}{Applied stochastic optimization to hyperparameter optimization problems in machine learning.}{}
 	\tableentry{$\bullet$}{Lectured the engineering systems optimization class and developed MATLAB training modules and projects related to multidisciplinary optimization (NoHiMDO) with applications to aircraft design.}{spaceafter}
 
@@ -224,6 +224,7 @@
 	{Research assistant} % Job title
 	{}{}  % Description
 	\tableentry{$\bullet$}{Won a Fonds de Recherche du Qu\'{e}bec Nature et Technologie (FRQNT) grant (56,000 CAD).}{}
+	\tableentry{$\bullet$}{Authored an agent-based simulation tool for modeling the spread of COVID-19 to be used as part of operations research and public health policy-making research.}{}
 	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes.}{}
 	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
@@ -396,14 +397,17 @@
 
 \textbf{\large Submitted preprints}\medskip \hrule \medskip
 
-\longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using agent-based modeling. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://www.gerad.ca/en/papers/G-2021-07}{https://www.gerad.ca/en/papers/G-2021-07}, (\textit{Under Review})\\
-\textit{funded by an NSERC discovery grant}}
+\longformpublication{
+A. Khalil, \textbf{K. Al Handawi}, I. Chamseddine, Z. Mohsen, A. Abdel Nour, R. Feghali and M. Kokkolaras (2021). Predicting COVID-19 incidences from patients’ viral load using deep-learning. \textit{Proceedings of the National Academy of Sciences}}
 
 %------------------------------------------------
 
 \textbf{\large Refereed Journal Articles}\medskip \hrule \medskip
 
-\longformpublication{\textbf{K. Al Handawi}, M. Panarotto, P. Andersson, O. Isaksson and M. Kokkolaras (2021). Optimization of design margins allocation when making use of additive remanufacturing. \textit{Journal of Mechanical Design}, (\textit{In Press})\\
+\longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using artificial life. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://www.gerad.ca/en/papers/G-2021-07}{https://www.gerad.ca/en/papers/G-2021-07}, (\textit{In Press})
+~\textit{funded by an NSERC discovery grant}}
+
+\longformpublication{\textbf{K. Al Handawi}, M. Panarotto, P. Andersson, O. Isaksson and M. Kokkolaras (2021). Optimization of design margins allocation when making use of additive remanufacturing, \textit{144}(1): pp 012001. \href{https://doi.org/10.1115/1.4051607}{doi: 10.1115/1.4051607}\\
 \textit{funded partially by NSERC, FRQNT, CARIC and EU Horizon 2020 research and innovation programme}}
 
 \longformpublication{M. Chehadeh, M. Wahbah, M. Awad, O. AbdulHay, \textbf{K. Al Handawi}, L. Seneviratne, I. Greatbatch and Y. Zweiri (2021). Novel aerial firefighting system for suppression of incipient cladding fires. \textit{Journal of Field Robotics}, (\textit{In Press})\\
