--- a/Khalil_CV_semiacademic.tex
+++ b/Khalil_CV_semiacademic.tex
@@ -369,15 +369,15 @@
 	
 	%------------------------------------------------
 	
+	\tableentryraw{Awarded 2nd place for final problem presentation and winner of best data visualization in the 11th Montreal Industreal Problem Solving Workshop}{\textsc{IVADO, Montreal, Canada}}{}
+
 	\tableentryraw{Team leader of the first team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 
 	\tableentryraw{Awarded 2nd place in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 
-	\tableentryraw{Recognition for voluntary commitment to the Graduate School's and the Graduate Student Affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Recognition for volunteering for the Graduate School and Student Affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 
 	\tableentryraw{Graduated Honors with distinction (2,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
-	
-	\tableentryraw{Made it to the Provost's list 3 times}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 	
 	%------------------------------------------------
 	
@@ -398,13 +398,13 @@
 \textbf{\large Submitted preprints}\medskip \hrule \medskip
 
 \longformpublication{
-A. Khalil, \textbf{K. Al Handawi}, I. Chamseddine, Z. Mohsen, A. Abdel Nour, R. Feghali and M. Kokkolaras (2021). Predicting COVID-19 incidences from patients’ viral load using deep-learning. \textit{Proceedings of the National Academy of Sciences}}
+A. Khalil, \textbf{K. Al Handawi}, I. Chamseddine, Z. Mohsen, A. Abdel Nour, R. Feghali and M. Kokkolaras (2021). Predicting COVID-19 incidences from patients’ viral load using deep-learning. \textit{medRxiv}} \href{https://doi.org/10.1101/2021.08.14.21262064}{doi: 10.1101/2021.08.14.21262064}
 
 %------------------------------------------------
 
 \textbf{\large Refereed Journal Articles}\medskip \hrule \medskip
 
-\longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using artificial life. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://www.gerad.ca/en/papers/G-2021-07}{https://www.gerad.ca/en/papers/G-2021-07}, (\textit{In Press})
+\longformpublication{\textbf{K. Al Handawi} and M. Kokkolaras (2021). Optimization of infectious disease prevention and control policies using artificial life. \textit{IEEE Transactions on Emerging Topics in Computational Intelligence}, \href{https://doi.org/10.1109/TETCI.2021.3107496}{doi: 10.1109/TETCI.2021.3107496}
 ~\textit{funded by an NSERC discovery grant}}
 
 \longformpublication{\textbf{K. Al Handawi}, M. Panarotto, P. Andersson, O. Isaksson and M. Kokkolaras (2021). Optimization of design margins allocation when making use of additive remanufacturing, \textit{144}(1): pp 012001. \href{https://doi.org/10.1115/1.4051607}{doi: 10.1115/1.4051607}\\
