update for Strathclyde

--- a/Khalil_CV.tex
+++ b/Khalil_CV.tex
@@ -103,21 +103,21 @@
 
 	%------------------------------------------------
 	
-	\tableentrytwo{\textbf{Research}}{Design under uncertainty. Additive manufacturing. Multidisciplinary design optimization. Decision making using Agent-based modeling. Instrumentation and state estimation.}{}
+	\tableentrytwo{\textbf{Research}}{Design under uncertainty, additive manufacturing, multidisciplinary design optimization, and decision making using agent-based modeling}{}
 
 	\tableentrytwo{\textbf{Technical}}{}{}
-	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for flexibility and robustness}{}
-	\tableentrytwo{}{-~~Reliability and uncertainty quantification (Monte-Carlo with importance sampling)}{spaceafter}
+	\tableentrytwo{\textsc{Engineering systems}}{-~~Design for changeability and reliability, uncertainty quantification}{}
+	\tableentrytwo{}{-~~Analysis and allocation of design margins}{spaceafter}
 	\tableentrytwo{\textsc{Modeling and}}{-~~Finite element methods (thermomechanical, structural, electromagnetic)}{}
-	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods, System dynamics models}{spaceafter}
+	\tableentrytwo{\textsc{simulation:}}{-~~Agent-based methods, system dynamics models}{spaceafter}
 	% \tableentrytwo{}{-~~System dynamics models}{spaceafter}
-	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (Mesh-adaptive direct search)}{}
+	\tableentrytwo{\textsc{Optimization:}}{-~~Blackbox and derivative-free optimization (mesh-adaptive direct search)}{}
 	% \tableentrytwo{}{-~~Multidisciplinary optimization (Non-hierarchical analytical target cascading)}{}
 	\tableentrytwo{}{-~~Stochastic optimization}{spaceafter}
-	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (Recurrent neural networks)}{}
+	\tableentrytwo{\textsc{Machine learning:}}{-~~Deep learning (recurrent neural networks)}{}
 	\tableentrytwo{}{-~~Hyperparameter optimization}{spaceafter}
 
-	\tableentrytwo{\textbf{Software}}{MATLAB and Simulink, Python ( pandas, PyTorch, matplotlib), C++ (CUDA, OpenMP, Qt)}{}
+	\tableentrytwo{\textbf{Software}}{MATLAB and Simulink, Python (pandas, PyTorch, matplotlib), C++ (CUDA, OpenMP, Qt)}{}
 	\tableentrytwo{}{FEA (Abaqus, ANSYS), CAD (SOLIDWORKS, NX Siemens), DAQ (NI LabVIEW)}{}
 
 	%------------------------------------------------
@@ -206,16 +206,17 @@
 	\workposition{Sep 2021 -- present} % Duration
 	{} % FT/PT (full time or part time)
 	{Systems Engineering Design Lab, Chalmers University of Technology} % Employer
-	{Gothenburg, Sweden} % Location
+	{G\"{o}teborg, Sweden} % Location
 	{Postdoctoral Researcher} % Job title
 	{}{} % Description
-	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED Lab.}{}
+	\tableentry{$\bullet$}{Integrate my doctoral research on design under uncertainty into the activities of the SED lab.}{}
+	\tableentry{$\bullet$}{Develop a margin analysis library for change propagation management in engineering systems.}{}
 	\tableentry{$\bullet$}{Conduct research into design margins and links to probablistic quantities such as reliability.}{}
 	\tableentry{$\bullet$}{Foster collaborations with the industry (GKN Aerospace) and write research proposals.}{spaceafter}
 
 	%------------------------------------------------
 
-	\workposition{Jan 2021 -- Aug 2021} % Duration
+	\workposition{Jan 2021 -- present} % Duration
 	{} % FT/PT (full time or part time)
 	{Systems Optimization Lab, McGill University} % Employer
 	{Montr\'{e}al, Canada} % Location
@@ -239,7 +240,7 @@
 	\tableentry{$\bullet$}{Developed mathematical frameworks for quantifying design flexibility and robustness and managing uncertain requirements in aircraft system and subsystem design.}{}
 	\tableentry{$\bullet$}{Developed a thermomechanical simulation model for modeling additive manufacturing repair and life extension processes.}{}
 	\tableentry{$\bullet$}{Co-developed a novel lifecycle cost model based on system dynamics to model the effect of life extension on lifecycle costs.}{}
-	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements (Jacobian formulation).}{spaceafter}
+	\tableentry{$\bullet$}{Used machine learning models to substitute expensive thermomechanical simulations in design studies and developed a variant of kernel smoothing for estimating the sensitivity of design solutions to different requirements by using a Jacobian matrix.}{spaceafter}
 
 	%------------------------------------------------
 
@@ -255,7 +256,7 @@
 
 	%------------------------------------------------
 
-	\workposition{Jan 2019,2020} % Duration
+	\workposition{Dec 2016} % Duration
 	{} % FT/PT (full time or part time)
 	{Center for Autonomous Robotic Systems, Khalifa University} % Employer
 	{Abu Dhabi, UAE} % Location
@@ -290,7 +291,7 @@
 	{Abu Dhabi, UAE} % Location
 	{Khalifa university Baja SAE team leader} % Job title
 	{}{}  % Description
-	\tableentry{$\bullet$}{Lead the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
+	\tableentry{$\bullet$}{Led the first UAE national team to compete in the Baja SAE competition (Maryland, 2015).}{}
 	\tableentry{$\bullet$}{Guided the assembly team on integrating vehicle subsystems (chassis, suspension, and power train).}{}
 	\tableentry{$\bullet$}{Performed structural optimization on vehicle chassis using MATLAB and ANSYS.}{}
 	\tableentry{$\bullet$}{Provided workshops on finite elemenet anaylsis and computer aided design to team members.}{}
@@ -382,13 +383,13 @@
 	
 	\tableentryraw{Awarded 2nd place for final problem presentation and winner of best data visualization in the 11th Montreal Industreal Problem Solving Workshop}{\textsc{IVADO, Montreal, Canada}}{}
 
-	\tableentryraw{Team leader of the first team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Team leader of the first UAE team to successfully qualify and complete the Baja SAE competition}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 
 	\tableentryraw{Awarded 2nd place in the Abu Dhabi Solar Challenge (10,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 
-	\tableentryraw{Recognition for volunteering for the Graduate School and Student Affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Recognition for volunteering for the graduate School and student affair's events}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 
-	\tableentryraw{Graduated Honors with distinction (2,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
+	\tableentryraw{Graduated honors with distinction (2,000 AED)}{\textsc{Khalifa University, Abu Dhabi, UAE}}{}
 	
 	%------------------------------------------------
 	
